--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: 路口师傅
 logo: /assets/img/logo.png
 description: today is tomorrow.
 show_downloads: false
-google_analytics: true
+google_analytics:
 theme: jekyll-theme-minimal
