Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: 路口师傅
 logo: /assets/img/logo.png
 description: today is tomorrow.
 show_downloads: false
-google_analytics:
+google_analytics: ljyes@outlook.com
 theme: jekyll-theme-minimal
