Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: 路口师傅
 logo: /assets/img/logo.png
 description: "today is tomorrow."
 show_downloads: false
-google_analytics: ljyes@outlook.com
+baidu_analytics: true
 theme: jekyll-theme-minimal
 lang: CN
 url: https://ljyeso.github.io
+author: 路口师傅
